--- a/live-doc-ui/src/main/pages/defaults/codeonline.css
+++ b/live-doc-ui/src/main/pages/defaults/codeonline.css
@@ -14,49 +14,118 @@
  * limitations under the License.
  */
 
-.IndicatorWrapper {
-    position: relative;
-    z-index: 5;
+/*
+ * Remove generic rules such as paddings or list bullet types,
+ * so they don't cause unexpected interactions.
+ */
+
+.codeonline-main *,
+.codeonline-main *::before,
+.codeonline-main *::after {
+    all: revert;
 }
-.Indicator:hover, .Indicator:active {
-    background: rgba(0,0,0,.125);
+
+/*
+ * Only display indicators that are applicable (i.e. nonzero or `true`).
+ * This is not the only option, an alternative could be e.g. fading or blurring.
+ */
+
+.codeonline-buttons button {
+    margin: .25em;
 }
-.Indicator {
+
+/*
+ * Only display indicators that are applicable (i.e. nonzero or `true`).
+ * This is not the only option, an alternative could be e.g. fading or blurring.
+ */
+
+.codeonline-indicator-wrapper {
+    display: none;
+}
+
+.codeonline-indicator-wrapper-visible {
+    display: inline-block;
+}
+
+/*
+ * Only display the description when the indicator is focused.
+ * CodeOnline depends on this behavior and only updates the description on focus.
+ */
+
+.codeonline-indicator-desc {
+    display: none;
+}
+
+.codeonline-indicator-wrapper:focus .codeonline-indicator-desc {
+    display: block;
+}
+
+/*
+ * Invite the user to click on the indicator to display the description.
+ */
+
+.codeonline-indicator {
     cursor: pointer;
     padding: .5ex;
     border-radius: 3px;
 }
-.ErrorIndicator::before {
-    content: '\26D4';
+
+.codeonline-indicator-wrapper:hover .codeonline-indicator,
+.codeonline-indicator-wrapper:focus .codeonline-indicator {
+    background: rgba(0, 0, 0, .125);
+}
+
+/*
+ * Kinds of diagnostics, each represented by a symbol.
+ * The "OK" indicator does not need padding, since it is not followed by a number.
+ */
+
+.codeonline-error-indicator::before {
+    content: '\26D4'; /* no entry sign */
     padding-right: .5ex;
 }
-.WarningIndicator::before {
-    content: '\26A0\FE0F';
+
+.codeonline-warning-indicator::before {
+    content: '\26A0\FE0F'; /* warning sign */
     padding-right: .5ex;
 }
-.NoteIndicator::before {
-    content: '\2139\FE0F';
+
+.codeonline-note-indicator::before {
+    content: '\2139\FE0F'; /* information source sign */
     padding-right: .5ex;
 }
-.NoDiagIndicator::before {
-    content: '\2705';
+
+.codeonline-ok-indicator::before {
+    content: '\2705'; /* check mark */
 }
-.IndicatorDesc {
-    white-space: pre;
+
+/*
+ * Exclude the description from the layout and display it right below the indicator.
+ * Styled as a speech bubble. The ::before pseudo-element is an up-pointing triangle.
+ */
+
+.codeonline-indicator-wrapper {
+    position: relative;
+    z-index: 5;
+}
+
+.codeonline-indicator-desc {
+    position: absolute; /* "absolute" with respect to the parent indicator-wrapper */
     left: 0;
     top: 2.75em;
-    position: absolute;
+    white-space: pre;
     padding: .25em .75em;
-    box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+    box-shadow: 2px 3px 5px rgba(0, 0, 0, .25);
     border-radius: 3px;
     border: 1px solid silver;
     background: white;
     font-family: monospace;
     line-height: 175%;
 }
-.IndicatorDesc::before {
+
+.codeonline-indicator-desc::before {
     content: '';
-    position: absolute;
+    position: absolute; /* with respect to the indicator-desc */
     left: 1ex;
     top: -1em;
     width: 0;
@@ -64,15 +133,21 @@
     border: solid 1em transparent;
     border-top: none;
     border-bottom-color: white;
-    filter: drop-shadow(0 -.75px .5px rgba(0,0,0,.4));
+    filter: drop-shadow(0 -.75px .5px rgba(0, 0, 0, .5));
 }
+
+/*
+ * Highlighting problems in source code.
+ */
 
 .codeonline-error {
 	border-bottom: dotted 2px red;
 }
+
 .codeonline-warning {
 	background-color: yellow;
 }
+
 .codeonline-note {
 	border-bottom: dotted 1px blue;
 }
