--- a/live-doc-ui/src/main/pages/defaults/codeonline.css
+++ b/live-doc-ui/src/main/pages/defaults/codeonline.css
@@ -21,17 +21,25 @@
 
 .codeonline-main *,
 .codeonline-main *::before,
-.codeonline-main *::after {
+.codeonline-main *::after,
+.CodeMirror-hints,
+.CodeMirror-hints *,
+.CodeMirror-hints *::before,
+.CodeMirror-hints *::after {
     all: revert;
 }
 
 /*
- * Only display indicators that are applicable (i.e. nonzero or `true`).
- * This is not the only option, an alternative could be e.g. fading or blurring.
+ * Toolbar with buttons and indicators.
  */
 
+.codeonline-toolbar {
+    background-color: #eee;
+    padding: .5em;
+}
+
 .codeonline-buttons button {
-    margin: .25em;
+    margin-right: .5em;
 }
 
 /*
